# json_controller.py
@@ -46,6 +46,7 @@ def json_to_debias_spec(content):
         attributes2 = content['A2'].split(' ')
         if 'Augmentations1' in content:
             augments1 = content['Augmentations1'].split(' ')
+            print('IS USED')
         if 'Augmentations2' in content:
             augments2 = content['Augmentations2'].split(' ')
     logging.info("JsonController: Found following bias spec: T1: " + str(target1) + "; T2: " + str(target2) + "; A1: " +
@@ -67,63 +68,72 @@ def bias_evaluation_json(scores, space, lower, t1, t2, a1, a2, not_found, delete
 
 
 def debiasing_json(space, lower, method, pca, aug1_list, aug2_list,
-                   t1, t2, a1, a2,
-                   t1_deb, t2_deb, a1_deb, a2_deb, not_found, deleted,
-                   t1_pca_bias=None, t2_pca_bias=None, a1_pca_bias=None, a2_pca_bias=None,
-                   t1_pca_deb=None, t2_pca_deb=None, a1_pca_deb=None, a2_pca_deb=None, lex_dict=None):
+                   t1, t2, a1, a2, aug1, aug2,
+                   t1_deb, t2_deb, a1_deb, a2_deb, aug1_deb, aug2_deb,
+                   not_found, deleted,
+                   t1_pca_bias=None, t2_pca_bias=None, a1_pca_bias=None, a2_pca_bias=None, aug1_pca_bias=None, aug2_pca_bias=None,
+                   t1_pca_deb=None, t2_pca_deb=None, a1_pca_deb=None, a2_pca_deb=None, aug1_pca_deb=None, aug2_pca_deb=None, lex_dict=None):
 
     t1 = dict_to_json(t1)
     t2 = dict_to_json(t2)
     a1 = dict_to_json(a1)
     a2 = dict_to_json(a2)
+    aug1 = dict_to_json(aug1)
+    aug2 = dict_to_json(aug2)
     t1_deb = dict_to_json(t1_deb)
     t2_deb = dict_to_json(t2_deb)
     a1_deb = dict_to_json(a1_deb)
     a2_deb = dict_to_json(a2_deb)
+    aug1_deb = dict_to_json(aug1_deb)
+    aug2_deb = dict_to_json(aug2_deb)
 
     if pca == 'false':
         if lex_dict is None:
             response = json.dumps(
                 {"Space": space, "Model": method, "Lower": lower, "PCA": pca,
                  "UsedAugmentations": {"A1": aug1_list, "A2": aug2_list},
-                 "BiasedSpace:": {"T1": t1, "T2": t2, "A1": a1, "A2": a2},
-                 "DebiasedSpace": {"T1": t1_deb, "T2": t2_deb, "A1": a1_deb, "A2": a2_deb},
+                 "BiasedSpace:": {"T1": t1, "T2": t2, "A1": a1, "A2": a2, "Augmentations1": aug1, "Augmentations": aug2},
+                 "DebiasedSpace": {"T1": t1_deb, "T2": t2_deb, "A1": a1_deb, "A2": a2_deb, "Augmentations1": aug1_deb, "Augmentation2": aug2_deb},
                  "NotFound": not_found, "Deleted": deleted})
         else:
             lex_dict = dict_to_json(lex_dict)
             response = json.dumps(
                 {"Space": space, "Model": method, "Lower": lower, "PCA": pca,
                  "UsedAugmentations": {"A1": aug1_list, "A2": aug2_list},
-                 "BiasedSpace:": {"T1": t1, "T2": t2, "A1": a1, "A2": a2},
-                 "DebiasedSpace": {"T1": t1_deb, "T2": t2_deb, "A1": a1_deb, "A2": a2_deb},
+                 "BiasedSpace:": {"T1": t1, "T2": t2, "A1": a1, "A2": a2, "Augmentations1": aug1, "Augmentations": aug2},
+                 "DebiasedSpace": {"T1": t1_deb, "T2": t2_deb, "A1": a1_deb, "A2": a2_deb, "Augmentations1": aug1_deb, "Augmentation2": aug2_deb},
                  "NotFound": not_found, "Deleted": deleted, "LexDictionary": lex_dict})
     else:
         t1_pca_bias = dict_to_json(t1_pca_bias)
         t2_pca_bias = dict_to_json(t2_pca_bias)
         a1_pca_bias = dict_to_json(a1_pca_bias)
         a2_pca_bias = dict_to_json(a2_pca_bias)
+        aug1_pca_bias = dict_to_json(aug1_pca_bias)
+        aug2_pca_bias = dict_to_json(aug2_pca_bias)
         t1_pca_deb = dict_to_json(t1_pca_deb)
         t2_pca_deb = dict_to_json(t2_pca_deb)
         a1_pca_deb = dict_to_json(a1_pca_deb)
         a2_pca_deb = dict_to_json(a2_pca_deb)
+        aug1_pca_deb = dict_to_json(aug1_pca_deb)
+        aug2_pca_deb = dict_to_json(aug2_pca_deb)
         if lex_dict is None:
             response = json.dumps(
                 {"Space": space, "Model": method, "Lower": lower, "PCA": pca,
-                 "UsedAugmentations": {"Augmentations1": aug1_list, "Augmentations2": aug2_list},
-                 "BiasedSpace:": {"T1": t1, "T2": t2, "A1": a1, "A2": a2},
-                 "DebiasedSpace": {"T1": t1_deb, "T2": t2_deb, "A1": a1_deb, "A2": a2_deb},
-                 "BiasedSpacePCA": {"T1": t1_pca_bias, "T2": t2_pca_bias, "A1": a1_pca_bias, "A2": a2_pca_bias},
-                 "DebiasedSpacePCA": {"T1": t1_pca_deb, "T2": t2_pca_deb, "A1": a1_pca_deb, "A2": a2_pca_deb},
+                 "UsedAugmentations": {"A1": aug1_list, "A2": aug2_list},
+                 "BiasedSpace:": {"T1": t1, "T2": t2, "A1": a1, "A2": a2, "Augmentations1": aug1, "Augmentations": aug2},
+                 "DebiasedSpace": {"T1": t1_deb, "T2": t2_deb, "A1": a1_deb, "A2": a2_deb, "Augmentations1": aug1_deb, "Augmentation2": aug2_deb},
+                 "BiasedSpacePCA": {"T1": t1_pca_bias, "T2": t2_pca_bias, "A1": a1_pca_bias, "A2": a2_pca_bias, "Augmentations1": aug1_pca_bias, "Augmentations2": aug2_pca_bias},
+                 "DebiasedSpacePCA": {"T1": t1_pca_deb, "T2": t2_pca_deb, "A1": a1_pca_deb, "A2": a2_pca_deb, "Augmentations1": aug1_pca_deb, "Augmentations2": aug2_pca_deb},
                  "NotFound": not_found, "Deleted": deleted})
         else:
             lex_dict = dict_to_json(lex_dict)
             response = json.dumps(
                 {"Space": space, "Model": method, "Lower": lower, "PCA": pca,
-                 "UsedAugmentations": {"Augmentations1": aug1_list, "Augmentations2": aug2_list},
-                 "BiasedSpace:": {"T1": t1, "T2": t2, "A1": a1, "A2": a2},
-                 "DebiasedSpace": {"T1": t1_deb, "T2": t2_deb, "A1": a1_deb, "A2": a2_deb},
-                 "BiasedSpacePCA": {"T1": t1_pca_bias, "T2": t2_pca_bias, "A1": a1_pca_bias, "A2": a2_pca_bias},
-                 "DebiasedSpacePCA": {"T1": t1_pca_deb, "T2": t2_pca_deb, "A1": a1_pca_deb, "A2": a2_pca_deb},
+                 "UsedAugmentations": {"A1": aug1_list, "A2": aug2_list},
+                 "BiasedSpace:": {"T1": t1, "T2": t2, "A1": a1, "A2": a2, "Augmentations1": aug1, "Augmentations": aug2},
+                 "DebiasedSpace": {"T1": t1_deb, "T2": t2_deb, "A1": a1_deb, "A2": a2_deb, "Augmentations1": aug1_deb, "Augmentation2": aug2_deb},
+                 "BiasedSpacePCA": {"T1": t1_pca_bias, "T2": t2_pca_bias, "A1": a1_pca_bias, "A2": a2_pca_bias, "Augmentations1": aug1_pca_bias, "Augmentations2": aug2_pca_bias},
+                 "DebiasedSpacePCA": {"T1": t1_pca_deb, "T2": t2_pca_deb, "A1": a1_pca_deb, "A2": a2_pca_deb, "Augmentations1": aug1_pca_deb, "Augmentations2": aug2_pca_deb},
                  "NotFound": not_found, "Deleted": deleted, "LexDictionary": lex_dict})
 
     return response
@@ -138,7 +148,7 @@ def json_with_vector_data(content):
         attributes2 = content['DebiasedSpace']['A2']
         if 'Augmentations1' in content['DebiasedSpace']:
             augments1 = content['DebiasedSpace']['Augmentations1']
-        if 'augments1' in content['DebiasedSpace']:
+        if 'Augmentations2' in content['DebiasedSpace']:
             augments2 = content['DebiasedSpace']['Augmentations2']
     return target1, target2, attributes1, attributes2, augments1, augments2
 
