# static/swagger.json
@@ -2027,6 +2027,40 @@
                   "example": "0.1090, -0.0867, 0.10627, 0.44887, ..."
                 }
               }
+            },
+            "Augmentations1": {
+              "type": "object",
+              "properties": {
+                "word1": {
+                  "type": "number",
+                  "example": "0.1090, -0.0867"
+                },
+                "word2": {
+                  "type": "number",
+                  "example": "0.1090, -0.0867"
+                },
+                "word3": {
+                  "type": "number",
+                  "example": "0.1090, -0.0867"
+                }
+              }
+            },
+            "Augmentations2": {
+              "type": "object",
+              "properties": {
+                "word1": {
+                  "type": "number",
+                  "example": "0.1090, -0.0867"
+                },
+                "word2": {
+                  "type": "number",
+                  "example": "0.1090, -0.0867"
+                },
+                "word3": {
+                  "type": "number",
+                  "example": "0.1090, -0.0867"
+                }
+              }
             }
           }
         },
@@ -2098,6 +2132,40 @@
                 "word3": {
                   "type": "number",
                   "example": "0.1090, -0.0867, 0.10627, 0.44887, ..."
+                }
+              }
+            },
+            "Augmentations1": {
+              "type": "object",
+              "properties": {
+                "word1": {
+                  "type": "number",
+                  "example": "0.1090, -0.0867"
+                },
+                "word2": {
+                  "type": "number",
+                  "example": "0.1090, -0.0867"
+                },
+                "word3": {
+                  "type": "number",
+                  "example": "0.1090, -0.0867"
+                }
+              }
+            },
+            "Augmentations2": {
+              "type": "object",
+              "properties": {
+                "word1": {
+                  "type": "number",
+                  "example": "0.1090, -0.0867"
+                },
+                "word2": {
+                  "type": "number",
+                  "example": "0.1090, -0.0867"
+                },
+                "word3": {
+                  "type": "number",
+                  "example": "0.1090, -0.0867"
                 }
               }
             }
@@ -2173,6 +2241,40 @@
                   "example": "0.1090, -0.0867"
                 }
               }
+            },
+            "Augmentations1": {
+              "type": "object",
+              "properties": {
+                "word1": {
+                  "type": "number",
+                  "example": "0.1090, -0.0867"
+                },
+                "word2": {
+                  "type": "number",
+                  "example": "0.1090, -0.0867"
+                },
+                "word3": {
+                  "type": "number",
+                  "example": "0.1090, -0.0867"
+                }
+              }
+            },
+            "Augmentations2": {
+              "type": "object",
+              "properties": {
+                "word1": {
+                  "type": "number",
+                  "example": "0.1090, -0.0867"
+                },
+                "word2": {
+                  "type": "number",
+                  "example": "0.1090, -0.0867"
+                },
+                "word3": {
+                  "type": "number",
+                  "example": "0.1090, -0.0867"
+                }
+              }
             }
           }
         },
@@ -2231,6 +2333,40 @@
               }
             },
             "A2": {
+              "type": "object",
+              "properties": {
+                "word1": {
+                  "type": "number",
+                  "example": "0.1090, -0.0867"
+                },
+                "word2": {
+                  "type": "number",
+                  "example": "0.1090, -0.0867"
+                },
+                "word3": {
+                  "type": "number",
+                  "example": "0.1090, -0.0867"
+                }
+              }
+            },
+            "Augmentations1": {
+              "type": "object",
+              "properties": {
+                "word1": {
+                  "type": "number",
+                  "example": "0.1090, -0.0867"
+                },
+                "word2": {
+                  "type": "number",
+                  "example": "0.1090, -0.0867"
+                },
+                "word3": {
+                  "type": "number",
+                  "example": "0.1090, -0.0867"
+                }
+              }
+            },
+            "Augmentations2": {
               "type": "object",
               "properties": {
                 "word1": {
